# rules_foreign_cc

./: .install-bazel.sh  .travis.yml  travis-ci.sh
examples/: examples_repositories.bzl
examples/configure_transitive/: BUILD  build_tarballs.sh  setup.sh  test.c
examples/configure_transitive/libarea/: BUILD  Makefile.in  config.h.in  configure  configure.ac
examples/configure_transitive/libarea/include/: Makefile.am  Makefile.in  area.h
examples/configure_transitive/libarea/src/: Makefile.am  Makefile.in  area.c
examples/configure_transitive/liblength/: BUILD  Makefile.in  configure  configure.ac
examples/configure_transitive/liblength/include/: Makefile.am  Makefile.in  length.h
examples/configure_transitive/liblength/src/: Makefile.am  Makefile.in  length.c
examples/configure_transitive/libvolume/: BUILD  Makefile.in  config.h.in  configure  configure.ac
examples/configure_transitive/libvolume/include/: Makefile.am  Makefile.in  volume.h
examples/configure_transitive/libvolume/src/: Makefile.am  Makefile.in  volume.c
