
AC_PREREQ([2.69])
AC_INIT([liblength], [1.0])

AC_CONFIG_SRCDIR([include/length.h])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE
LT_PREREQ([2.2])
LT_INIT()

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])
AC_OUTPUT
